--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h2 class="my">My Playlist</h2>
+	<h3 class="my">My Playlist</h3> 
 	<div class="player_one">
 		<div onclick="window.open('https://www.youtube.com/watch?v=kd-6aw99DpA','_blank')">Song 1</div>
 		<div onclick="window.open('https://www.youtube.com/watch?v=9iIX4PBplAY','_blank')">Song 2</div>
@@ -15,19 +15,20 @@
 		<div onclick="window.open('https://www.youtube.com/watch?v=puKD3nkB1h4','_blank')">Song 4</div>
 		<div onclick="window.open('https://www.youtube.com/watch?v=6MgsHSAcI9k','_blank')">Song 5</div>
 	</div>
+	<h5 class="now">Now Playing...</h5> 
 	<div class="player_two">
 		<video controls>
 			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
-	</div>
+		          <h4>MP3 Songs</h4>  
 	<div class="player_mp3">
 		<audio controls>
 			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</div>
-		
+	</div> 
 	</div> 
     <script type="text/javascript" src="./script.js">
 </script>
