--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 class="my">My Playlist</h1> 
 	<div class="player_one">
-		<ul>
+		<ul class="li"> 
     <li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song 1</a></li>
     <li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 2</a></li>
     <li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song 3</a></li>
@@ -23,7 +23,7 @@
 			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
-		          <h2>MP3 Songs</h2>  
+		          <h2>MP3 songs</h2>  
 		            <p>Maan Meri Jaan</p> 
 	<div class="player_mp3">
 		<audio controls>
